k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: user-management

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:s
        app: api-gateway

    spec:
      containers:
        - name: api-gateway
          image: jerinirowz/api-gateway:v1

          ports:
            - containerPort: 5000
