k8s/auth.service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: user-management

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
        - name: auth-service
          image: jerinirowz/auth-service:v1

          ports:
            - containerPort: 5001

          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 20
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: user-management

spec:
  selector:
    app: auth-service

  ports:
    - port: 5001
      targetPort: 5001

  type: ClusterIP
