k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: user-management
spec:
  clusterIP: None # 🔥 HEADLESS
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: user-management
spec:
  serviceName: mongo
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo
          image: mongo:7

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
