k8s/user.service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: user-management

spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: jerinirowz/user-service:v1

          ports:
            - containerPort: 5002 # REST
            - containerPort: 50051 # gRPC
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-management

spec:
  selector:
    app: user-service

  ports:
    - name: http
      port: 5002
      targetPort: 5002

    - name: grpc
      port: 50051
      targetPort: 50051

  type: ClusterIP
